# CIBMTR

./: .flake8  .gitignore  README.md  pyproject.toml
src/: catboost_pair_rank.py  hpopt.py  main.py  pair.py  preprocess.py  train.py
src/catboost_pair_rank/: utils.py
src/nn/: feature.py  model.py  target.py  train.py
